@@ -1,3 +1,8 @@
+2013-01-06    <JIM@LS-RED>
+
+	* spimview.cpp, console.cpp [http://sourceforge.net/p/spimsimulator/feature-requests/9/]:
+	Use fixed width font for spim output to line up colums properly
+
 2012-12-16    <JIM@LS-RED>
 
 	* QtSpim/QtSpim.pro [sourceforge #37: https://sourceforge.net/u/smeenai/]:
